--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hpp": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
+    "multer": "^1.4.5-lts.1",
     "validator": "^12.0.0",
     "xss-clean": "^0.1.1"
   }
