--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
@@ -22,6 +23,7 @@
     "mongoose": "^5.7.7",
     "multer": "^1.4.5-lts.1",
     "validator": "^12.0.0",
+    "xlsx": "^0.18.5",
     "xss-clean": "^0.1.1"
   }
 }
