--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
+    "fast-csv": "^5.0.1",
     "helmet": "^3.21.2",
     "hpp": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.15.0",
     "validator": "^12.0.0",
     "xlsx": "^0.18.5",
     "xss-clean": "^0.1.1"
